kubernetes/infrastructure/velero-ui/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: velero-ui
  namespace: velero
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`velero.pxldi.de`)"
      middlewares:
        - name: internal-only
          namespace: traefik
        - name: authentik-forward-auth
          namespace: traefik
      priority: 10
      services:
        - name: velero-ui
          port: 3000

    - kind: Rule
      match: "Host(`velero.pxldi.de`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - name: authentik-server
          namespace: authentik
          port: 9000
